# course_work_2-classes-

./: README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_utils_py.html
src/: category.py  exceptions.py  iter_class.py  main.py  order.py  product.py  utils.py
tests/: conftest.py  test_category.py  test_iter_class.py  test_main.py  test_product.py
